[project]
name = "Assembly PDM Test"
version = ""
description = "Just an example project to play with PDM."
authors = [
    {name = "Eduardo Izquierdo", email = "sirmartin@gmail.com"},
]
license-expression = "MIT"
dependencies = ["print_function", "flake8"]
requires-python = ">=3.9"

[project.urls]
Homepage = ""
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
